lib/server/data/rqueue_server.err
SyntaxError: /home/matteo/sviluppo/rqueue_jruby/lib/server/wise.rb:24: syntax error, unexpected tSYMBEG

				     :ip_client => @w_type.ip_client,:ip_node => @w_type.ip_node)
         ^
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/wise.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/machine.rb:1
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/machine.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/parser.rb:4
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/parser.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/setup.rb:3
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/setup.rb:49
            (root) at ../rqueue_server.rb:10
SyntaxError: /home/matteo/sviluppo/rqueue_jruby/lib/server/wise.rb:24: syntax error, unexpected tSYMBEG

				     :ip_client => @w_type.ip_client,:ip_node => @w_type.ip_node)
         ^
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/wise.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/machine.rb:1
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/machine.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/parser.rb:4
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/parser.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/setup.rb:3
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/setup.rb:49
            (root) at ../rqueue_server.rb:10
SyntaxError: /home/matteo/sviluppo/rqueue_jruby/lib/server/wise.rb:24: syntax error, unexpected tSYMBEG

				     :ip_client => @w_type.ip_client,:ip_node => @w_type.ip_node)
         ^
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/wise.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/machine.rb:1
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/machine.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/parser.rb:4
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/parser.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/setup.rb:3
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/setup.rb:49
            (root) at ../rqueue_server.rb:10
SyntaxError: /home/matteo/sviluppo/rqueue_jruby/lib/server/wise.rb:24: syntax error, unexpected tSYMBEG

				     :ip_client => @w_type.ip_client,:ip_node => @w_type.ip_node)
         ^
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/wise.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/machine.rb:1
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/machine.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/parser.rb:4
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/parser.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/setup.rb:3
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/setup.rb:49
            (root) at ../rqueue_server.rb:10
SyntaxError: /home/matteo/sviluppo/rqueue_jruby/lib/server/wise.rb:24: syntax error, unexpected tSYMBEG

				     :ip_client => @w_type.ip_client,:ip_node => @w_type.ip_node)
         ^
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/wise.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/machine.rb:1
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/machine.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/parser.rb:4
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/parser.rb:49
            (root) at /home/matteo/sviluppo/rqueue_jruby/lib/server/setup.rb:3
           require at org/jruby/RubyKernel.java:1042
           require at /home/matteo/.rvm/rubies/jruby-1.6.7/lib/ruby/site_ruby/1.8/rubygems/custom_require.rb:36
  require_relative at /home/matteo/sviluppo/rqueue_jruby/lib/server/setup.rb:49
            (root) at ../rqueue_server.rb:10
